--- a/simias/configure.in
+++ b/simias/configure.in
@@ -1,7 +1,7 @@
 AC_INIT(src/Common/Configuration.cs)
 AC_CANONICAL_SYSTEM
 AM_INIT_AUTOMAKE(simias, 1.0)
-VERSION=$VERSION.`date +%Y%m%d`
+# VERSION=$VERSION.`date +%Y%m%d`
 AM_MAINTAINER_MODE
 AC_PROG_CC
 
@@ -14,12 +14,14 @@ case $host_os in
         AC_CHECK_PROG(CSC, mcs, mcs)
         test -z "$CSC" && AC_MSG_ERROR([no C Sharp compiler: mcs not found in \$PATH])
 	    PKG_CONFIG_DIR='lib'
+	    VERSION=$VERSION.`date +%Y%m%d`
     ;;
     darwin*)
         SIMIAS_OS='darwin'
         AC_CHECK_PROG(CSC, mcs, mcs)
         test -z "$CSC" && AC_MSG_ERROR([no C Sharp compiler: mcs not found in \$PATH])
 	    PKG_CONFIG_DIR='lib'
+	    VERSION=$VERSION.`date +%Y%m%d`
     ;;
     cygwin*)
         SIMIAS_OS='windows'
@@ -27,6 +29,7 @@ case $host_os in
         test -z "$CSC" && AC_CHECK_PROG(CSC, mcs, mcs)
         test -z "$CSC" && AC_MSG_ERROR([no C Sharp compiler: neither csc nor mcs found in \$PATH])
     	PKG_CONFIG_DIR='.'
+    	VERSION=$VERSION.`date +%Y.%m%d`
     ;;
     *)
         AC_MSG_ERROR([Unknown host_os: $host_os])
