spec and pc name updates
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/R1FCSRC2_BR@4681 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/configure.in
+++ b/ifolder/configure.in
@@ -510,7 +510,7 @@ test/iFolderComponent/Makefile
 package/Makefile
 package/windows/Makefile
 package/linux/Makefile
-package/linux/ifolder.spec
+package/linux/ifolder-se.spec
 package/darwin/Makefile
 doc/Makefile
 help/Makefile
