updated for name
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/R1FCSRC2_BR@4683 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/package/darwin/client-pkg/Description.plist
+++ b/ifolder/package/darwin/client-pkg/Description.plist
@@ -7,8 +7,8 @@
 	<key>IFPkgDescriptionDescription</key>
 	<string>iFolder is a web based file sharing app</string>
 	<key>IFPkgDescriptionTitle</key>
-	<string>iFolder</string>
+	<string>iFolder Client</string>
 	<key>IFPkgDescriptionVersion</key>
-	<string>3.0</string>
+	<string>1.0</string>
 </dict>
 </plist>
