--- a/ifolder/src/WebService/AssemblyInfo.cs.in
+++ b/ifolder/src/WebService/AssemblyInfo.cs.in
@@ -53,15 +53,15 @@ using System.Runtime.InteropServices;
 // by using the '*' as shown below:
 //
 
-[assembly: AssemblyVersion("1.0.*")]
+[assembly: AssemblyVersion("@_VERSION_@")]
 
-[assembly: SatelliteContractVersion("1.0.0.0")]
+[assembly: SatelliteContractVersion("@_VERSION_@")]
 [assembly: ComCompatibleVersion(1, 0, 0, 0)]
 [assembly: TypeLibVersion(1, 0)]
 
 [assembly: CLSCompliant(false)]
 [assembly: AssemblyDefaultAlias("Novell.iFolder.Web.dll")]
-[assembly: AssemblyInformationalVersion("1.0.0.0")]
+[assembly: AssemblyInformationalVersion("@_VERSION_@")]
 [assembly: NeutralResourcesLanguage("en-US")]
 
 [assembly: AllowPartiallyTrustedCallers]
