--- a/package/linux/simias.spec.in
+++ b/package/linux/simias.spec.in
@@ -21,7 +21,7 @@
 #
 #######################################################################
 
-%define prefix /opt/novell/ifolder3
+%define prefix /opt/novell/ifolder-se
 
 Summary      : Simias
 Name         : @PACKAGE@
