--- a/simias/src/SimiasApp/Makefile.am
+++ b/simias/src/SimiasApp/Makefile.am
@@ -9,7 +9,11 @@ SimiasApp_FLAGS = $(CSC_EXEFLAG)
 SimiasApp_LIBS = System.dll System.Data.dll $(SYSTEM_XML) SimiasClient.dll Simias.dll Simias.Web.dll System.Web.dll
 SimiasApp_LIBPATH = $(NUNIT_LIBPATH) $(LOG4NET_DIR) ../SimiasClient ../Simias.dll ../WebService
 
-EXTRA_DIST = App.ico $(SimiasApp_CSFILES1)
+EXTRA_DIST = App.ico $(SimiasApp_CSFILES1) AssemblyInfo.cs.in
+
+AssemblyInfo.cs: $(srcdir)/AssemblyInfo.cs.in
+	sed -e 's,@_VERSION_@,@VERSION@,g' $< > $@
+	chmod +x $@
 
 if MAKE_DOC_FILE
 DOC_FILE = $(basename $@).doc.xml
@@ -38,7 +42,7 @@ uninstall-local:
 
 installcheck-local: install
 	
-CLEAN_FILES = SimiasApp.exe $(DOC_FILE_CLEAN)
+CLEAN_FILES = SimiasApp.exe $(DOC_FILE_CLEAN) AssemblyInfo.cs
 
 clean-local:
 	rm -rf $(CLEAN_FILES) $(COMMON_CLEAN_FILES)
