--- a/simias/src/WebService/Makefile.am
+++ b/simias/src/WebService/Makefile.am
@@ -9,7 +9,11 @@ SimiasWebService_FLAGS = $(CSC_LIBFLAG)
 SimiasWebService_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasClient.dll Simias.dll Novell.Security.ClientPasswordManager.NetCredential.dll
 SimiasWebService_LIBPATH = ../SimiasClient ../Simias.dll $(NOVELL_SECURITY_DIR)
 
-EXTRA_DIST = win.web.config mono.web.config Global.asax Simias.asmx SimiasBrowser.asmx Simias.wsdl $(SimiasWebService_CSFILES1)
+EXTRA_DIST = win.web.config mono.web.config Global.asax Simias.asmx SimiasBrowser.asmx Simias.wsdl $(SimiasWebService_CSFILES1) AssemblyInfo.cs.in
+
+AssemblyInfo.cs: $(srcdir)/AssemblyInfo.cs.in
+	sed -e 's,@_VERSION_@,@VERSION@,g' $< > $@
+	chmod +x $@
 
 if MAKE_DOC_FILE
 DOC_FILE = $(basename $@).doc.xml
@@ -45,7 +49,7 @@ uninstall-local:
 
 installcheck-local: install
 	
-CLEAN_FILES = Simias.Web.dll $(DOC_FILE_CLEAN)
+CLEAN_FILES = Simias.Web.dll $(DOC_FILE_CLEAN) AssemblyInfo.cs
 
 clean-local:
 	rm -rf $(CLEAN_FILES) $(COMMON_CLEAN_FILES)
