Changed "ifolder3" -> "ifolder-se"
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/R1FCSRC2_BR@4698 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/LinuxClient/po/Makefile.am
+++ b/ifolder/src/LinuxClient/po/Makefile.am
@@ -37,7 +37,7 @@ update-po: $(POFILES)
 			--files-from=src/LinuxClient/po/POTFILES \
 			--language=C# \
 			--join-existing \
-			--output=$(srcdir)/ifolder3.pot \
+			--output=$(srcdir)/ifolder-se.pot \
 			--keyword="Util.GS"; 
 	cd ../../../; \
 	pofiles='$(POFILES)'; \
