--- a/ifolder/help/Makefile.am
+++ b/ifolder/help/Makefile.am
@@ -13,12 +13,12 @@ uninstall-local:
 else
 
 install-exec-local: 
-	$(mkinstalldirs) $(DESTDIR)$(datadir)/ifolder-se/help
-	cp -r en $(DESTDIR)$(datadir)/ifolder-se/help
-	find $(DESTDIR)$(datadir)/ifolder-se/help -name "CVS" | xargs rm -rf
+	$(mkinstalldirs) $(DESTDIR)$(datadir)/ifolder3/help
+	cp -r en $(DESTDIR)$(datadir)/ifolder3/help
+	find $(DESTDIR)$(datadir)/ifolder3/help -name "CVS" | xargs rm -rf
 
 uninstall-local:
-	cd $(DESTDIR)$(datadir)/ifolder-se/help; rm -rf en
+	cd $(DESTDIR)$(datadir)/ifolder3/help; rm -rf en
 
 endif
 
