--- a/ifolder/src/LinuxClient/po/Makefile.am
+++ b/ifolder/src/LinuxClient/po/Makefile.am
@@ -37,7 +37,7 @@ update-po: $(POFILES)
 			--files-from=src/LinuxClient/po/POTFILES \
 			--language=C# \
 			--join-existing \
-			--output=$(srcdir)/ifolder-se.pot \
+			--output=$(srcdir)/ifolder3.pot \
 			--keyword="Util.GS"; 
 	cd ../../../; \
 	pofiles='$(POFILES)'; \
