Removed rebranding.Also fixed Bug 73503 - Linux iFolder 3 menu option should bemore specific.I've changed the lauch menu name from "iFolder" to "iFolder 3".
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4716 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/LinuxClient/application/ifolder.desktop.in
+++ b/ifolder/src/LinuxClient/application/ifolder.desktop.in
@@ -1,9 +1,9 @@
 [Desktop Entry]
-Name=iFolder
-GenericName=iFolder
+Name=iFolder 3
+GenericName=iFolder 3
 Comment=iFolder Collaborative File Sharing Tool
 Exec=@_bindir_@/ifolder
-Icon=@_datadir_@/ifolder-se/images/ifolder24.png
+Icon=@_datadir_@/ifolder3/images/ifolder24.png
 StartupNotify=false
 Terminal=false
 Type=Application
