Added the OS X package code to build an install for OS X
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4720 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/bonjour/Makefile.am
+++ b/bonjour/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS = src
 
-DIST_SUBDIRS = $(SUBDIRS)
+DIST_SUBDIRS = package $(SUBDIRS)
 
 EXTRA_DIST = tools
 
@@ -12,7 +12,10 @@ doc-clean:
 	$(MAKE) -C doc clean
 
 .PHONY: package package-clean package-install package-uninstall
-package package-clean package-install package-uninstall:
+package:
+	$(MAKE) -C package all
+
+package-clean package-install package-uninstall:
 	$(MAKE) -C package $@
 
 installcheck-summary:
