Changed the name of the product to iFolder 3 everywhere
Fixes bug Bug 86461 - Mac iFolder application name should change to iFolder 3


git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4734 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/OSXClient/Info.plist.in
+++ b/ifolder/src/OSXClient/Info.plist.in
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>iFolder</string>
+	<string>iFolder 3</string>
 	<key>CFBundleIconFile</key>
 	<string>ifolder.icns</string>
 	<key>CFBundleIdentifier</key>
