updated packaging to install to ifolder3 not ifolder-se
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@4739 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/package/darwin/Info.plist
+++ b/package/darwin/Info.plist
@@ -19,7 +19,7 @@
 	<key>IFPkgFlagAuthorizationAction</key>
 	<string>AdminAuthorization</string>
 	<key>IFPkgFlagDefaultLocation</key>
-	<string>/opt/novell/ifolder-se</string>
+	<string>/opt/novell/ifolder3</string>
 	<key>IFPkgFlagFollowLinks</key>
 	<false/>
 	<key>IFPkgFlagInstallFat</key>
