bug: 78523 - added proxy support for the linux client
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/R1FCSRC1_BR@4754 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/configure.in
+++ b/ifolder/configure.in
@@ -138,11 +138,13 @@ AC_SUBST(COMMON_MAINTAINER_CLEAN_FILES)
 #
 GTK_SHARP_MINIMUM_VERSION=1.0.4
 GNOME_SHARP_MINIMUM_VERSION=1.0.4
+GCONF_SHARP_MINIMUM_VERSION=1.0.4
 GDK20_MINIMUM_VERSION=2.2.3
 ATK_MINIMUM_VERSION=1.2.4
 AC_SUBST(GTK_SHARP_MINIMUM_VERSION)
 AC_SUBST(GNOME_SHARP_MINIMUM_VERSION)
 AC_SUBST(GLADE_SHARP_MINIMUM_VERSION)
+AC_SUBST(GCONF_SHARP_MINIMUM_VERSION)
 AC_SUBST(GDK20_MINIMUM_VERSION)
 AC_SUBST(ATK_MINIMUM_VERSION)
 
@@ -475,6 +477,10 @@ case $IFOLDER_OS in
         PKG_CHECK_MODULES(ATK, atk >= $ATK_MINIMUM_VERSION)
         AC_SUBST(ATK_CFLAGS)
         AC_SUBST(ATK_LIBS)
+
+	PKG_CHECK_MODULES(GCONF_SHARP, gconf-sharp > $GCONF_SHARP_MINIMUM_VERSION)
+	AC_SUBST(GCONF_SHARP_PREFIX)
+	AC_SUBST(GCONF_SHARP_LIBS)
     ;;
     darwin)
         PKG_CHECK_MODULES(SIMIAS_CLIENT_C, simias-client-c >= 1.0)
