--- a/simias/Simias.csproj
+++ b/simias/Simias.csproj
@@ -299,6 +299,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "src\Domain\WSInspection.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "src\DomainProvider\DomainProvider.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
