1.Fixed bug #80407. Changed the format of unathenticated calls in the web.config file to use <webservice>[:<webmethod>]. 2. Moved the check for unathenticated web services to VerifyPrincipalFromRequest(). This makes it so the unathenticated web service check does not need to be made on every request, just when no session is set. 3. Fixed how we look for soap methods to include both SoapAction and the method specified on the http query string. This fixes the ability to call the web service from a browser.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@4775 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/other/SimpleServer/mono.web.config
+++ b/other/SimpleServer/mono.web.config
@@ -42,7 +42,7 @@
 
     <appSettings>
 		<add key="MonoServerDefaultIndexFiles" value="index.aspx, Default.aspx, default.aspx, index.html, index.htm" />
-		<add key="SimiasAuthNotRequired" value="Login.ashx, PingSimias:Simias.Web.SimiasService:Simias.Web, GetDomainID:Simias.DomainService.Web.DomainService:Simias.SimpleServer" />
+		<add key="SimiasAuthNotRequired" value="Login.ashx, Simias.asmx:PingSimias, DomainService.asmx:GetDomainID" />
 		<add key="SimiasRequireSSL" value="no" />
     </appSettings>
 	
