--- a/simias/other/SimpleServer/mono.web.config
+++ b/simias/other/SimpleServer/mono.web.config
@@ -42,7 +42,7 @@
 
     <appSettings>
 		<add key="MonoServerDefaultIndexFiles" value="index.aspx, Default.aspx, default.aspx, index.html, index.htm" />
-		<add key="SimiasAuthNotRequired" value="Login.ashx, PingSimias:Simias.Web.SimiasService:Simias.Web, GetDomainID:Simias.DomainService.Web.DomainService:Simias.SimpleServer" />
+		<add key="SimiasAuthNotRequired" value="Login.ashx, Simias.asmx:PingSimias, DomainService.asmx:GetDomainID" />
 		<add key="SimiasRequireSSL" value="no" />
     </appSettings>
 	
