1. Use custom VirtualListView for user selector (fix for https://bugzilla.novell.com/show_bug.cgi?id=81219). 2. Added hot keys to user selector (fix for https://bugzilla.novell.com/show_bug.cgi?id=83525).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4777 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/iFolderShell/iFolderComponent.csproj
+++ b/ifolder/src/iFolderShell/iFolderComponent.csproj
@@ -214,6 +214,16 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
+                    RelPath = "VirtualListView.cs"
+                    SubType = "Component"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "VirtualListView.resx"
+                    DependentUpon = "VirtualListView.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "Win32Window.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
