Added Blowfish encription class.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@4786 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/Simias.csproj
+++ b/Simias.csproj
@@ -334,6 +334,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "src\Encryption\Blowfish.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "src\Events\DefaultSubscriber.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
