Don't allow iFolders to be created or accepted into a directory where the users doesn't have read/write access rights (fix for https://bugzilla.novell.com/show_bug.cgi?id=81246)
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4788 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/iFolderShell/iFolderComponent.csproj
+++ b/ifolder/src/iFolderShell/iFolderComponent.csproj
@@ -224,6 +224,16 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
+                    RelPath = "Win32.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "Win32Security.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Win32Window.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
