Re-enabled the po/ directory to be built for i18n/l10n purposes.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4803 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/LinuxClient/Makefile.am
+++ b/ifolder/src/LinuxClient/Makefile.am
@@ -1,6 +1,4 @@
-SUBDIRS = library application
-# bht: Removed the po subdirectory from being built for FCS
-# po
+SUBDIRS = library application po
 
 DIST_SUBDIRS = $(SUBDIRS)
 
