Simias still showing as protected due to missing vendor--Other open source projects use Novell or RedHat, so changing this to match the others as Novell Inc.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@4805 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/package/linux/simias.spec.in
+++ b/package/linux/simias.spec.in
@@ -32,7 +32,7 @@ Group        : Applications/Productivity
 Source       : %{name}-%{version}.tar.gz
 URL          : http://forge.novell.com/modules/xfmod/project/?ifolder
 #Distribution : 
-Vendor       : <unknown>
+Vendor       : Novell Inc.
 Packager     : <unknown>
 BuildRoot    : %{_tmppath}/%{name}-%{version}
 
