--- a/ifolder/configure.in
+++ b/ifolder/configure.in
@@ -495,6 +495,8 @@ src/iFolder/Makefile
 src/LinuxClient/Makefile
 src/LinuxClient/library/Makefile
 src/LinuxClient/application/Makefile
+src/LinuxClient/po/Makefile
+src/LinuxClient/po/POTFILES
 src/FormsTrayApp/Makefile
 src/iFolderShell/Makefile
 src/TrayIcon/Makefile
