Updated Makefile and configure.in to use the shorter paths
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@4844 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,7 @@ DIST_SUBDIRS = $(SUBDIRS) doc package test other
 
 PROJECT_FILES = $(srcdir)/Simias.sln $(srcdir)/Simias.csproj
 
-EXTRA_DIST = tools external $(srcdir)/$(PACKAGE)*.pc.in $(PROJECT_FILES)
+EXTRA_DIST = tools/gsoap external/NS external/flaim external/log4net $(srcdir)/$(PACKAGE)*.pc.in $(PROJECT_FILES)
 
 all: simias.pc simias-client.pc simias-client-c.pc
 
