--- a/simias/configure.in
+++ b/simias/configure.in
@@ -147,7 +147,7 @@ case $SIMIAS_OS in
         ICON_FLAG='/resource:'
         INSTALL_EXE_OPTS='-m 644'
         LOG4NET_DIR="$EXTERNAL_DIR/log4net/bin/mono/1.0/release"
-        NOVELL_SECURITY_DIR="$EXTERNAL_DIR/Novell.Security/mono/bin"
+        NOVELL_SECURITY_DIR="$EXTERNAL_DIR/NS/mono"
         NUNIT="mono nunit-console.exe"
         NUNIT_LIBPATH="$TOOLDIR/NUnit/mono/bin"
         NUNIT_FLAGS='/nologo'
@@ -186,7 +186,7 @@ case $SIMIAS_OS in
         ICON_FLAG='/resource:'
         INSTALL_EXE_OPTS='--mode=644'
         LOG4NET_DIR="$EXTERNAL_DIR/log4net/bin/mono/1.0/release"
-        NOVELL_SECURITY_DIR="$EXTERNAL_DIR/Novell.Security/mono/bin"
+        NOVELL_SECURITY_DIR="$EXTERNAL_DIR/NS/mono"
         NUNIT="mono nunit-console.exe"
         NUNIT_LIBPATH="$TOOLDIR/NUnit/mono/bin"
         NUNIT_FLAGS='/nologo'
@@ -251,7 +251,7 @@ case $SIMIAS_OS in
         LIBFLAG=''
         LIBS='kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib rpcrt4.lib ws2_32.lib imagehlp.lib'
         LOG4NET_DIR="$EXTERNAL_DIR/log4net/bin/net/1.0/release"
-        NOVELL_SECURITY_DIR="$EXTERNAL_DIR/Novell.Security/net/bin"
+        NOVELL_SECURITY_DIR="$EXTERNAL_DIR/NS/net"
         NUNIT="nunit-console.exe"
         NUNIT_LIBPATH="$TOOLDIR/NUnit/net/bin"
         NUNIT_FLAGS='/nologo'
